...
class SignInScreen extends StatelessWidget {
  const SignInScreen({super.key});

  @override
  Widget build(BuildContext context) {
    return _AuthScaffold(
      title: '로그인',
      children: [
        const UnderlineTextField(
          label: '이메일 또는 유저네임',
          hint: 'example@mail.com',
        ),
        const SizedBox(height: 18),
...

  @override
  Widget build(BuildContext context) {
    return _AuthScaffold(
      title: '회원가입',
      children: [
        const UnderlineTextField(label: '이메일'),
        const SizedBox(height: 18),
        const UnderlineTextField(label: '유저네임'),
        const SizedBox(height: 18),
        const UnderlineTextField(
          label: '비밀번호',
          obscureText: true,
...
